add code to make domino's demo work for Kenny's hackathon post

--- a/llm-frontend/index.html
+++ b/llm-frontend/index.html
@@ -23,7 +23,7 @@
         <input
           x-model="nextPrompt"
           type="text"
-          placeholder="Get me a salad on Doordash ..."
+          placeholder="Get me a pizza from Domino's ..."
           class="flex grow w-full h-10 pl-4 pr-12 py-2 text-md bg-white border-2 rounded-3xl border-black ring-offset-background placeholder:text-neutral-500 focus:border-black focus:outline-none focus:ring-black disabled:cursor-not-allowed disabled:opacity-50 font-['Mansalva']"
           @keydown.window.prevent.ctrl.k="$el.focus()"
           @keydown.window.prevent.cmd.k="$el.focus()"
